# momcozy-agent

./: .env.example  .gitignore  pyproject.toml  requirements.txt
data/: milk_management.db
docs/: agent-app-self-test-checklist.html  deployment.md  momcozy-agent-service-test-plan.md  web-agent-communication.md
docs/agent/: README.md
evals/: agent-scenarios.json
scripts/: deploy_linux.sh  deploy_windows.ps1  run_all.py  run_chat_ui.py  validate_agent_design.py
services/services/: __init__.py  data_store.py
services/services/milk_management/: assessment.py  calendar.py  context.py  db.py  feeding.py  status_advice.py
skills/birth-prep/: SKILL.md
skills/birth-prep/references/: birth-journey-plan.md  birth-plan-card.md  hospital-bag-service.md
skills/device-guidance/: SKILL.md
skills/emotion-support/: SKILL.md
skills/milk-management/: SKILL.md
skills/milk-management/references/: calendar-adjustment-flow.md  calendar-adjustment.md  milk-plan-creation-flow.md  milk-plan-creation.md  today-summary-flow.md  today-summary.md
src/momcozy_agent/: __init__.py  agents.py  api_app.py  config.py  contexts.py  milk_management_tools.py  server.py  skills.py  static_context.py  tool_registry.py  tool_schemas.py  tools.py  types.py
tests/: test_agent_tool_events.py  test_api_analysis.py  test_birth_plan_card.py  test_hospital_bag_card.py  test_milk_management_tools.py  test_pump_session_summary.py
tool_modules/: __init__.py  milk_management_tools.py
web/: app.js  ibclc-chat.html  index.html  styles.css
web/hospital-bag-cart/: index.html
(+48 files in other folders)
