[project]
name = "momcozy-agent"
version = "0.1.0"
description = "Momcozy maternal and baby care agent request builder for the OpenAI Responses API."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["openai"]
server = [
    "openai",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12",
]

[project.scripts]
momcozy-chat-ui = "momcozy_agent.server:main"
momcozy-api = "momcozy_agent.api_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
